# scripts

./: affordable_housing_1st_reading.json  afh_bill_votes.json  combined_afh_fb.json  combiner.py  descrepancies.txt  finance_bill_2024_2nd_reading.json  mp_data.json  pyproject.toml  rep_names_template.json  scrap.py  votes.json
